src/snapshots/rlox__test_runtime__invalid_declaration.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a = var b;\n        \")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:2:12]
   │
 2 │         var a = var b;
   │                 ─┬─  
   │                  ╰─── Expected primary
───╯


