src/snapshots/rlox__test_runtime__parse_stack_closure.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_parse(r#\"\n        fun outer() {\n            var x = \"outside\";\n            fun inner() {\n              print x;\n            }\n            inner();\n          }\n          outer();\n        \"#)"
---
ast:
fun outer() {
var x = "outside";
fun inner() {
print x;
}
inner();
}
outer();



